fixes tree caret alignement issues between firefox and chrome

--- a/less/fuelux-override/tree.less
+++ b/less/fuelux-override/tree.less
@@ -1,15 +1,14 @@
 
 .tree-caret-sizes() {
-	width: @tree-caret-size;
-	height: @tree-caret-size;
-	top: 2px;
+	width: 1px;//this fixes weird FF/Chrome issues
+	height: 7px;//this fixes weird FF/Chrome issues
+	top: 3px;
 	left: -6px;
 
 }
 .tree-caret() {
 	background: none;
 	border-color: none;
-	top: 0px;
 	left: 0px;
 	.fuelux-icon;
 	.fuelux-icon-caret-right;
@@ -18,11 +17,9 @@
 	border: 0px solid transparent;
 	border-radius: 0;
 	content: "" !important;
-	padding: 0;
-	padding-left: 0;
-	padding-right: 0;
-	background-position-x: 0px;
-	background-position-y: 0px;
+	padding: 12px 0 0;//has to be here instead of .tree-caret-sizes() because otherwise folder selection in FF messes up
+	background-position: 0px;
+	box-sizing: border-box;
 }
 
 
